--- a/contemporaneo.html
+++ b/contemporaneo.html
@@ -326,6 +326,23 @@
                 </div>
             </div>
 
+            <div class="movie-card" data-title="Autos, mota y rocanrol" data-year="2025" data-director="J.M Cravioto"
+                data-genre="Drama, Historia"
+                data-sinopsis="Justino y el Negro querían organizar unas carreras de coches y un pequeño concierto para hacer el negocio de sus vidas. Pero todo salió mal y terminaron creando el concierto más grande de la historia de México: el festival de Avándaro."
+                data-trailer-url="https://youtu.be/5abUiBsaSig?si=vnc5yTXkEUnTjp2Z"
+                data-movie-url="https://www.primevideo.com/-/es/detail/Autos-Mota-y-Rocanrol/0GREEULN0H0Q8WPVH2H3DA7QYD"
+                onclick="mostrarDetalle(this)">
+                <div class="movie-image">
+                    <img src="https://pics.filmaffinity.com/Autos_mota_y_rocanrol-101191265-large.jpg"
+                        alt="Póster Autos, mota y rocanrol" style="width:100%; height:100%; object-fit: cover;">
+                </div>
+                <div class="movie-info">
+                    <h4>Autos, mota y rocanrol</h4>
+                    <span class="year">2025</span>
+                    <p>Director: J.M Cravioto</p>
+                    <p>Género: Drama, Historia</p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -392,4 +409,5 @@
 
 <script src="metodos.js"></script>
 </body>
+
 </html>
