--- a/contemporaneo.html
+++ b/contemporaneo.html
@@ -329,7 +329,7 @@
             <div class="movie-card" data-title="Autos, mota y rocanrol" data-year="2025" data-director="J.M Cravioto"
                 data-genre="Drama, Historia"
                 data-sinopsis="Justino y el Negro querían organizar unas carreras de coches y un pequeño concierto para hacer el negocio de sus vidas. Pero todo salió mal y terminaron creando el concierto más grande de la historia de México: el festival de Avándaro."
-                data-trailer-url="https://www.youtube.com/embed/aUcnvCswXsA"
+                data-trailer-url="https://www.youtube.com/embed/5Rd8ZaoMgNU?si=C-E2R3Q79crGXPsl"
                 data-movie-url="https://www.primevideo.com/-/es/detail/Autos-Mota-y-Rocanrol/0GREEULN0H0Q8WPVH2H3DA7QYD"
                 onclick="mostrarDetalle(this)">
                 <div class="movie-image">
@@ -411,4 +411,5 @@
 </body>
 
 </html>
+
 
