--- a/contemporaneo.html
+++ b/contemporaneo.html
@@ -340,7 +340,7 @@
                     <h4>Autos, mota y rocanrol</h4>
                     <span class="year">2025</span>
                     <p>Director: J.M Cravioto</p>
-                    <p>Género: Drama, Historia</p>
+                    <p>Género: Drama, Historia, Humor</p>
                 </div>
             </div>
         </div>
@@ -411,6 +411,7 @@
 </body>
 
 </html>
+
 
 
 
